[package]
name = "wledtr"
version = "0.1.1"
description = "A cross-platform WLED Controller"
authors = ["0xk1f0"]
license = "GPL-3.0-only"
repository = "https://github.com/0xk1f0/wledTR"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wledtr"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.16", features = [] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json"] }

# Ref: https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
strip = true
lto = true
