[package]
name = "wledtr"
version = "0.1.2"
description = "A cross-platform WLED Controller"
authors = ["0xk1f0"]
license = "GPL-3.0-only"
repository = "https://github.com/0xk1f0/wledTR"
edition = "2021"
rust-version = "1.70"

[lib]
name = "wledtr"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.1", features = [] }
tauri-plugin-store = "2.1.0"
tauri-plugin-m3 = { git = "https://github.com/0xk1f0/tauri-plugin-m3"}
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }

# https://v2.tauri.app/concept/size/

[profile.dev]
incremental = true

[profile.release]
codegen-units = 8
opt-level = "s"
panic = "abort"
strip = true
lto = true
